--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,10 +16,13 @@
         android:id="@+id/bottom_navigationview"
         android:layout_width="match_parent"
         android:layout_height="92dp"
+        android:paddingStart="34dp"
+        android:paddingEnd="34dp"
+        app:labelVisibilityMode="labeled"
         android:layout_weight="1"
         app:itemBackground="#FFFFFF"
-        app:itemIconTint="@drawable/menu_click_color"
-        app:itemTextColor="@drawable/menu_click_color"
+        app:itemIconTint="@drawable/menu_click_ic_color"
+        app:itemTextColor="@drawable/menu_click_text_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/item_menu"
         app:itemIconSize="48dp"
