--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="blue_main">#0045FF</color>
     <color name="blue_sub">#3168FD</color>
     <color name="gray_sub">#D9D9D9</color>
+    <color name="gray_sub2">#878787</color>
 </resources>
