--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
-
+    app:startDestination="@id/homeFragment">
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.example.bankclerk.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first" >
-
-        <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
-    </fragment>
+        android:id="@+id/homeFragment"
+        android:name="com.example.bankclerk.HomeFragment"
+        android:label="HomeFragment"
+        tools:layout="@layout/fragment_home"/>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.example.bankclerk.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second" >
+        android:id="@+id/counselFragment"
+        android:name="com.example.bankclerk.CounselFragment"
+        android:label="CounselFragment"
+        tools:layout="@layout/fragment_counsel"/>
+    <fragment
+        android:id="@+id/recordFragment"
+        android:name="com.example.bankclerk.RecordFragment"
+        android:label="CounselFragment"
+        tools:layout="@layout/fragment_record"/>
+    <fragment
+        android:id="@+id/mypageFragment"
+        android:name="com.example.bankclerk.MypageFragment"
+        android:label="CounselFragment"
+        tools:layout="@layout/fragment_mypage"/>
 
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
-    </fragment>
+
 </navigation>
